# jarvis-project

./: .env.example  .gitignore  README.md  pyproject.toml  test_live_cycle.py  test_live_results.json
browser-extension/: content.js  manifest.json  options.html
docs/: CDP-CRAWL-TEST.md  SETUP.md  feedback-log.md  profitability-report.md  project-overview.html
docs/devlog/: 2026-03-15-autotest.md  2026-03-15-cycle4.md  2026-03-15-cycle5-final.md  2026-03-15-cycle6-google-cost.md  2026-03-15-secretary-upgrade.md  cycle1-improvement.md  cycle2-improvement.md  final-quality-report.md
locale/: en.json  ko.json
pc-client/: main.py
pc-client/claude_code/: executor.py
pc-client/config/: settings.py
pc-client/crawlers/: browser_tracker.py  file_tracker.py  screen_reader.py  text_extractor.py  window_tracker.py
server/: main.py
shared/: constants.py  types.py
tests/: api_test_results.json  conftest.py  crawl_all_folders.py  crawl_comprehensive.py  crawl_custom_folders.py  crawl_deep.py  crawl_final.py  crawl_inbox.py  crawl_mid_pages.py  crawl_page2.py  crawl_remaining_folders.py  crawl_results.json  crawl_test_live.py  mvp_2hr_results.json  real_data_test_results.json  simulate_2hr_mvp.py  simulate_detailed.py  simulate_work.py  simulate_workday.py  tab_switch_results.json  test_api.py  test_api_and_assistant.py  test_briefing.py  test_crud.py  test_health.py  test_idle_stability.py  test_pc_client.py  test_phase3.py  test_proactive.py  test_proactive_live.py  test_real_data_conversations.py  test_screen_reader.py  test_tab_switch.py  test_uiautomation.py
(+53 files in other folders)
