[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "J.A.R.V.I.S — AI Assistant that crawls PC & mobile activity"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "edge-tts>=6.1.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
google = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]
pc = [
    "watchdog>=4.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0",
    "pvporcupine>=4.0",
    "uiautomation>=2.0",
]

[tool.setuptools.packages.find]
include = ["server*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
